--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -5,5 +5,20 @@
 
 <h2>Accounts Template</h2>
 
-
+<div class="text-center">
+    <h2>{{ title }}</h2>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        {{ content }}
+        <div class="col-sm-6 col-12">
+          <form method="post"> {% csrf_token %}
+            {{ form }}
+            <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {%  endblock content%}
