created Reviews & Tags

--- a/products/templates/products/featured.html
+++ b/products/templates/products/featured.html
@@ -6,7 +6,7 @@
 
 {% for obj in featured_list %}
 
-{{obj.title}}<br/>
+{% include 'products/snippets/card.html' with instance=obj %}
 
 
 {% endfor %}
