--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -5,6 +5,6 @@
     <div class="card-body">
       <h5 class="card-title">{{ instance.title }}</h5>
       <p class="card-text">{{ instance.description }}</p>
-      <a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
+      <a href="{{ url 'list' }}" class="btn btn-primary">View</a>
     </div>
   </div>
