--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -3,7 +3,7 @@
 
 {%   block content %}
 
-<h2>Accounts Template</h2>
+<h2>Tafit Tech Limited</h2>
 
 <div class="text-center">
     <h2>{{ title }}</h2>
@@ -12,12 +12,7 @@
     <div class="row">
       <div class="col">
         {{ content }}
-        <div class="col-sm-6 col-12">
-          <form method="post"> {% csrf_token %}
-            {{ form }}
-            <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-        </div>
+        
       </div>
     </div>
   </div>
