--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -6,6 +6,6 @@
       <h5 class="card-title">{{ instance.title }}</h5>
       <p class="card-text">{{ instance.description }}</p>
       <p class="card-text">{{ instance.price }}</p>
-      <a href="{% url 'list' %}" class="btn btn-primary">View</a>
+      <a href="{{instance.get_absolute_url}}" class="btn btn-primary">View</a>
     </div>
   </div>
