--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -53,10 +53,7 @@
           </li>
           {% endif %}
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+      {% include 'search/snippets/search-form.html' %} 
       </div>
     </div>
   </nav>
