--- a/templates/auth/contact.html
+++ b/templates/auth/contact.html
@@ -1,6 +1,15 @@
+{% extends 'base/base.html' %}
+
+
+
+
+
+{% block content %}
 <div class="col-sm-6 col-12">
     <form method="post"> {% csrf_token %}
       {{ form }}
       <button type="submit" class="btn btn-default">Submit</button>
       </form>
   </div>
+{% endblock content %}
+
