--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,6 +1,11 @@
+{% extends 'base/base.html' %}
 
 
+
+{% block contect %}
 <form method="post">{% csrf_token %}
     {{form}}
     <button type="submit" class="btn btn-secondary">Submit</button>
 </form>
+{% endblock contect %}
+
